contact page + js fix

--- a/pikerswebsite/contact.html
+++ b/pikerswebsite/contact.html
@@ -62,8 +62,26 @@ Pikers New Website src copyright John Hamilton 2018
 
 		<!-- Main component for a primary marketing message or call to action -->
 		<div class="jumbotron">
-			<h1 class="col-centered"><i class="fa fa-exclamation-triangle"></i> Under Construction! <i class="fa fa-exclamation-triangle"></i><h1>
-				<h2 class="col-centered">Call Us!<h2>
+
+			<h1 class="col-centered">Contact the Pikers</h1>
+			<div class="row">
+				<div class="col-md-6">
+					<h2>Send Us an Email:</h2>
+					<p>Want to get ahold of us for any reason (comments, gigs, albums, auditions, late night appointments)? Send an email to <a href="mailto:thepikers@gmail.com">thepikers@gmail.com</a>, and we'll get back to you ASAP.</p>
+				</div>
+				<div class="col-md-6">
+					<h2>Follow Us on Social Media:</h2>
+					<p>The Pikers are on <a href="https://www.facebook.com/thepikers">Facebook</a> and <a href="https://twitter.com/ThePikers">Twitter</a>! This isn't the most efficient way of contacting us, but it's the most fun. And why not follow us while you're there?</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Check out other WashU A Capella groups:</h2>
+					<ul>
+						<li>
+					</ul>
+				</div>
+			</div>
 		</div>
 		<!--Footer Links-->
 		<div class="container-fluid">
