--- a/pikerswebsite/landing.html
+++ b/pikerswebsite/landing.html
@@ -43,7 +43,7 @@ Pikers New Website src copyright John Hamilton 2018
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/jquery.min.js"><\/script>')</script>
+	<script>window.jQuery || document.write('<script src="assets/js/jquery.min.js"><\/script>')</script>
 	<!-- <script src="../../../assets/js/bootstrap.min.js"></script> -->
 	<script src="assets/js/bootstrap.min.js"></script>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
