header change to stop linebreaks

--- a/pikerswebsite/about.html
+++ b/pikerswebsite/about.html
@@ -43,7 +43,7 @@ Pikers New Website src copyright John Hamilton 2018
 						<span class="icon-bar"></span>
 					</button>
 					<a href="landing.html"><img id="pikers-logo" src="images/HDP.png" class="img-responsive navbar-brand" alt="The Washington University Pikers"></a>
-					<a class="navbar-brand" href="landing.html">The Washington University Pikers</a>
+					<a class="navbar-brand" href="landing.html">The WashU Pikers</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
