added to contact page

--- a/pikerswebsite/contact.html
+++ b/pikerswebsite/contact.html
@@ -78,7 +78,18 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-12">
 					<h2>Check out other WashU A Capella groups:</h2>
 					<ul>
-						<li>
+						<li><p><a href="http://acac.wustl.edu/">A Cappella Advisory Council</a> (governing body for WashU A Cappella)</p></li>
+						<li><p><a href="http://afterdark.wustl.edu/">After Dark</a> (Co-ed)</p></li>
+						<li><p><a href="http://amateurs.wustl.edu/">The Amateurs</a> (Co-ed)</p></li>
+						<li><p><a href="http://disney.wustl.edu/">The Aristocats</a> (Co-ed, Disney)</p></li>
+						<li><p><a href="http://deliverance.wustl.edu/">Deliverance</a> (Co-ed, Christian)</p></li>
+						<li><p><a href="http://ghostlights.wustl.edu/">The Ghost Lights</a> (Co-ed, Broadway/Television)</p></li>
+						<li><p><a href="http://greenleafs.wustl.edu/">The Greenleafs</a> (All-female)</p></li>
+						<li><p><a href="http://fools.wustl.edu/">More Fools than Wise</a> (Co-ed, Classical)</p></li>
+						<li><p><a href="http://mosaicwhispers.wustl.edu/">The Mosaic Whispers</a> (Co-ed)</p></li>
+						<li><p><a href="https://www.facebook.com/pages/The-Sensasians/121797831179028">Sensasians</a> (Co-ed, Asian)</p></li>
+						<li><p><a href="http://www.thestereotypes.org/">The Stereotypes</a> (All-male)</p></li>
+						<li><p><a href="http://staam.wustl.edu/">Staam</a> (Co-ed, Jewish)</p></li>
 					</ul>
 				</div>
 			</div>
