JS finally fixed after last tweak + footer organization

--- a/pikerswebsite/about.html
+++ b/pikerswebsite/about.html
@@ -90,28 +90,23 @@ Pikers New Website src copyright John Hamilton 2018
 		<div class="container-fluid">
 
 			<!--First row-->
-			<div class="row">
-
-				<!--First column-->
-				<div class="col-md-6 col-centered">
-					<!--Facebook-->
-					<div class="col-md-3">
-						<a href="https://www.facebook.com/thepikers" class="col-centered"><i class="fa fa-facebook fa-5x"> </i></a>
-					</div>
-					<!-- Twitter-->
-					<div class="col-md-3">
-						<a href="https://twitter.com/ThePikers" class="col-centered"><i class="fa fa-twitter fa-5x"> </i></a>
-					</div>
-					<!-- YouTube -->
-					<div class="col-md-3">
-						<a href="http://www.youtube.com/WashUPikers" class="col-centered"><i class="fa fa-youtube fa-5x"> </i></a>
-					</div>
-					<!-- Spotify -->
-					<div class="col-md-3">
-						<a href="https://open.spotify.com/artist/5GzyGIBzCXxirFYS6B4njM" class="col-centered"><i class="fa fa-spotify fa-5x"> </i></a>
-					</div>
+			<div class="row col-centered">
+				<!--Facebook-->
+				<div class="col-xs-3">
+					<a href="https://www.facebook.com/thepikers" class="col-centered"><i class="fa fa-facebook-official fa-5x"> </i></a>
 				</div>
-				<!--/First column-->
+				<!-- Twitter-->
+				<div class="col-xs-3">
+					<a href="https://twitter.com/ThePikers" class="col-centered"><i class="fa fa-twitter fa-5x"> </i></a>
+				</div>
+				<!-- YouTube -->
+				<div class="col-xs-3">
+					<a href="http://www.youtube.com/WashUPikers" class="col-centered"><i class="fa fa-youtube-play fa-5x"> </i></a>
+				</div>
+				<!-- Spotify -->
+				<div class="col-xs-3">
+					<a href="https://open.spotify.com/artist/5GzyGIBzCXxirFYS6B4njM" class="col-centered"><i class="fa fa-spotify fa-5x"> </i></a>
+				</div>
 			</div>
 			<!--/First row-->
 		</div>
@@ -133,9 +128,10 @@ Pikers New Website src copyright John Hamilton 2018
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-	<script src="../../dist/js/bootstrap.min.js"></script>
+	<script>window.jQuery || document.write('<script src="assets/js/jquery.min.js"><\/script>')</script>
+	<!-- <script src="../../../assets/js/bootstrap.min.js"></script> -->
+	<script src="assets/js/bootstrap.min.js"></script>
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-	<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	<!-- <script src="../../../assets/js/ie10-viewport-bug-workaround.js"></script> -->
 </body>
 </html>
