--- a/pikerswebsite/index.html
+++ b/pikerswebsite/index.html
@@ -81,28 +81,23 @@ Pikers New Website src copyright John Hamilton 2018
 		<div class="container-fluid">
 
 			<!--First row-->
-			<div class="row">
-
-				<!--First column-->
-				<div class="col-md-6 col-centered">
-					<!--Facebook-->
-					<div class="col-md-3">
-						<a href="https://www.facebook.com/thepikers" class="col-centered"><i class="fa fa-facebook-official fa-5x"> </i></a>
-					</div>
-					<!-- Twitter-->
-					<div class="col-md-3">
-						<a href="https://twitter.com/ThePikers" class="col-centered"><i class="fa fa-twitter fa-5x"> </i></a>
-					</div>
-					<!-- YouTube -->
-					<div class="col-md-3">
-						<a href="http://www.youtube.com/WashUPikers" class="col-centered"><i class="fa fa-youtube-play fa-5x"> </i></a>
-					</div>
-					<!-- Spotify -->
-					<div class="col-md-3">
-						<a href="https://open.spotify.com/artist/5GzyGIBzCXxirFYS6B4njM" class="col-centered"><i class="fa fa-spotify fa-5x"> </i></a>
-					</div>
+			<div class="row col-centered">
+				<!--Facebook-->
+				<div class="col-xs-3">
+					<a href="https://www.facebook.com/thepikers" class="col-centered"><i class="fa fa-facebook-official fa-5x"> </i></a>
 				</div>
-				<!--/First column-->
+				<!-- Twitter-->
+				<div class="col-xs-3">
+					<a href="https://twitter.com/ThePikers" class="col-centered"><i class="fa fa-twitter fa-5x"> </i></a>
+				</div>
+				<!-- YouTube -->
+				<div class="col-xs-3">
+					<a href="http://www.youtube.com/WashUPikers" class="col-centered"><i class="fa fa-youtube-play fa-5x"> </i></a>
+				</div>
+				<!-- Spotify -->
+				<div class="col-xs-3">
+					<a href="https://open.spotify.com/artist/5GzyGIBzCXxirFYS6B4njM" class="col-centered"><i class="fa fa-spotify fa-5x"> </i></a>
+				</div>
 			</div>
 			<!--/First row-->
 		</div>
