clean up youtube video aspect ratios

--- a/pikerswebsite/index.html
+++ b/pikerswebsite/index.html
@@ -64,13 +64,19 @@ Pikers New Website src copyright John Hamilton 2018
 		<div class="jumbotron">
 			<h1>Welcome to the Piker's Website!</h1>
 			<p>We are an all-male a cappella group, and the oldest a cappella group at WashU, founded in 1985. All of us share a common love for music, though we come from many backgrounds - some of us having extensive prior musical experience, and others little to none. Regardless, we come together to sing, and whether it's at a sorority gig or our annual campus concert, <a href="#">Jammin' Toast</a>, we constantly strive to be the most enjoyable and exciting a cappella group on campus. And the most ridiculous. We're very good at that.</p>
-			<p><!-- Invisible spacer --></p>
+			<p></p> <!-- Invisible spacer -->
 
 			<div class="container-fluid">
 				<div class="col-sm-9">
 					<h2>Check out some of our music!</h2>
-					<iframe width="100%" height="400" src="https://www.youtube.com/embed/OqmTRVhBP_8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-					<iframe width="100%" height="400" src="https://www.youtube.com/embed/AIOxe5nojXE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					<div class="aspect-ratio">
+						<iframe src="https://www.youtube.com/embed/OqmTRVhBP_8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+					<p></p> <!-- Invisible spacer -->
+					<div class="aspect-ratio">
+						<iframe src="https://www.youtube.com/embed/AIOxe5nojXE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+					</div>
+					<p></p> <!-- Invisible spacer -->
 				</div>
 				<div class="col-sm-3">
 					<a class="twitter-timeline" data-height="900" data-link-color="#008000" href="https://twitter.com/ThePikers?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
