--- a/pikerswebsite/gigs.html
+++ b/pikerswebsite/gigs.html
@@ -62,7 +62,22 @@ Pikers New Website src copyright John Hamilton 2018
 
 		<!-- Main component for a primary marketing message or call to action -->
 		<div class="jumbotron">
-			<h1 class="col-centered"><i class="fa fa-exclamation-triangle"></i> Under Construction! <i class="fa fa-exclamation-triangle"></i><h1>
+			<h1>Piker's Gigs</h1>
+			<h2>Interested in hiring us for a performance? We're available, flexible, and come in <a href="music.html">a variety of flavors</a>. Feel free to <a href="contact.html">contact us</a> for more info.</h2>
+			<div class="row">
+				<div class="col-md-6">
+					<h2>Past Gigs</h2>
+					<div class="well">
+						<p><b>Jammin' Toast 2017</b><br>January 20th, 2017 at 8:00 PM<br>Where: Graham Chapel</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<h2>Upcoming Gigs</h2>
+					<div class="well">
+						<p>We don't have any public gigs currently on schedule, but check back soon or join our <a href="contact.html">mailing list</a> to find out when we'll be performing again!</p>
+					</div>
+				</div>
+			</div>
 		</div>
 		<!--Footer Links-->
 		<div class="container-fluid">
