--- a/pikerswebsite/videos.html
+++ b/pikerswebsite/videos.html
@@ -62,7 +62,7 @@ Pikers New Website src copyright John Hamilton 2018
 
 		<!-- Main component for a primary marketing message or call to action -->
 		<div class="jumbotron">
-			<h1 class="col-centered"><i class="fa fa-exclamation-triangle"></i> Under Construction! <i class="fa fa-exclamation-triangle"></i><h1>
+			<h1 class="col-centered"><i class="fa fa-exclamation-triangle"></i> Under Construction! <i class="fa fa-exclamation-triangle"></i></h1>
 		</div>
 		<!--Footer Links-->
 		<div class="container-fluid">
