--- a/pikerswebsite/members.html
+++ b/pikerswebsite/members.html
@@ -68,72 +68,12 @@ Pikers New Website src copyright John Hamilton 2018
 			<p></p> <!-- Invisible Spacer -->
 			<div class="row">
 				<div class="col-md-3">
-					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Sloane.jpg" alt="Mac Sloane">
-				</div>
-				<div class="col-md-9">
-					<h2>Mac Sloane</h2>
-					<p>Hometown: St. Louis, MO<br>Voice Part: Baritone<br>Class of 2016 - Major: "getting" his MBA <br>Minister of Facebook<br></p> <!-- Invisible Spacer -->
-					<p>Rather than sing in his audition, Mac cracked mean-spirited jokes about every single member of the group, reducing F***face to tears. While this endeared him to the Pikers, they did not decide to admit him until he revealed that he had a car and was willing to ferry them to and from Steak 'n Shake. When Mac isn't writing for StudLife, he enjoys keg stands, looking like he doesn't quite belong in the background of photos, and trying to figure out what "The Move" is for the night.</p>
-				</div>
-			</div>
-
-			<p></p> <!-- Invisible Spacer -->
-			<div class="row">
-				<div class="col-md-3">
-					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Kesselman.jpg" alt="Lucas Kesselman">
-				</div>
-				<div class="col-md-9">
-					<h2>Lucas Kesselman</h2>
-					<p>Hometown: Westport, CT <br>Voice Part: Baritone<br>Class of 2018 - Major: Systems Engineering<br>Minister of New Guys<br></p> <!-- Invisible Spacer -->
-					<p>Lucas' entrance into the Pikers marked the end of an impressive powerlifting career. WashU's politically conscious student body inspired him to become a vegan, after which he was unable to keep up his 12,000 calorie/day and subsequently lost a staggering 75% of his body's muscle mass. Miraculously, Lucas has maintained the strength in his forearms which he a bit too forcefully asserts is a result of his side career of playing professional Super Smash Bros and not due to other wrist related pursuits.</p>
-				</div>
-			</div>
-
-			<p></p> <!-- Invisible Spacer -->
-			<div class="row">
-				<div class="col-md-3">
-					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Lee.jpg" alt="Jacob Lee">
-				</div>
-				<div class="col-md-9">
-					<h2>Jacob Lee</h2>
-					<p>Hometown: Kansas City, KS<br>Voice Part: Baritone<br>Class of 2018 - Majors: Chinese, Marketing<br>Minister of Pitch<br></p> <!-- Invisible Spacer -->
-					<p>Jacob is part student and part musical robot: he auditioned for the Pikers by singing every single note on the piano perfectly - and all at once. When the Pikers asked him to sing the notes separately he stated that "our locations in time exist on a spectrum" and that he didn't "appreciate our cis-temporal microaggressions." Jacob has an unhealthy and perhaps unprofessional obsession with eggplants.</p>
-				</div>
-			</div>
-
-			<p></p> <!-- Invisible Spacer -->
-			<div class="row">
-				<div class="col-md-3">
-					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Graham.jpg" alt="Nate Graham">
-				</div>
-				<div class="col-md-9">
-					<h2>Nate Graham</h2>
-					<p>Hometown: Madison, WI<br>Voice Part: Baritone<br>Class of 2018 - Majors: Political Science, Environmental Biology <br>Minister of State<br></p> <!-- Invisible Spacer -->
-					<p>Nate is a member of the People Enjoying Nature's Incredible Splendor club (also known as Beta Theta Pi), which involves spending extensive amounts of time in trees while contemplating the meaning of life. When he's not off the grid, Nate spends his time mindlessly eating and trying to convince the Pikers to sing Bob Marley, Slightly Stoopid, or the Dirty Heads. He is also a nudist, environmentalist, and socialist - in that order.</p>
-				</div>
-			</div>
-
-			<p></p> <!-- Invisible Spacer -->
-			<div class="row">
-				<div class="col-md-3">
 					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Shapiro.jpg" alt="Jeremy Shapiro">
 				</div>
 				<div class="col-md-9">
 					<h2>Jeremy Shapiro</h2>
 					<p>Hometown: Atlanta, GA<br>Voice Part: Tenor<br>Class of 2019 - Major: Physics<br>Minister of Cash Money Flow<br></p> <!-- Invisible Spacer -->
 					<p>Jeremy's favorite restaurant is Beta Frattoria. Unfortunately, Jeremy was banned for life from said restaurant after found having intimate relations with the chef's daughter on the chef's own personal bed. He often misses Pikers rehearsals because he is napping or hammocking with his WUSA. Jeremy is infatuated with people named Julian. If not wearing a jean jacket and dark sunglasses in public, Jeremy can often be found with the Jews.</p>
-				</div>
-			</div>
-
-			<p></p> <!-- Invisible Spacer -->
-			<div class="row">
-				<div class="col-md-3">
-					<img class="img-responsive img-thumbnail img-fill" src="images/faces/Abbey.jpg" alt="Porter Abbey">
-				</div>
-				<div class="col-md-9">
-					<h2>Porter Abbey</h2>
-					<p>Hometown: Chicago, IL<br>Voice Part: Tenor<br>Class of 2019 - Major: ???<br>Minister of F$%*ing New Guys<br></p> <!-- Invisible Spacer -->
-					<p>Porter is the human analog of Michelangelo's statue of David. Porter has 349 likes on his Facebook profile picture. Commenting on this feat previously achieved exclusively by sorority sisters and Armourf$#*&, Porter credited his success to never showering and a frightening intake of cheddar. Porter was the key feature in this year's WUSLAM, performing a vivid and breathtaking reading of his original poem, "My Life is a Vacuum; and it can clean." Porter can often be found on campus with those scoundrels who hammock and play with hula-hoops at festivals without shoes on, as if they own the green party!</p>
 				</div>
 			</div>
 
@@ -205,7 +145,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Anirudh Gandhi</h2>
 					<p>Hometown: Mumbai, India<br>Voice Part: Tenor<br>Class of 2020 - Major: Undecided<br></p> <!-- Invisible Spacer -->
-					<p>NEWEST OLD GUY</p>
+					<p>Anirudh was born on the desert planet of Tatooine to parents Shmi and The Force. Although his closest friends often reprimand him for this, Ani has a nasty habit of comparing the quality of exciting new life experiences to the joy he derives from podracing. A small green fellow once approached Ani and offered him a bid to his favorite fraternity(TM), but he became visibly ill when he realized that a main stipulation to entry was reading (and re-reading) the Ancient Jedi Texts. Addressing him by the name "Rudi" will immediately turn him to the dark side, so one must exercise extreme nomenclatural caution. When Ani grows up, he dreams to one day diddle the queen's decoy and rule everything from the Inner Core to the Outer Rim. But until Order 66 passes, he'll just stick to podracing. Oh, and soccer.</p>
 				</div>
 			</div>
 
@@ -217,7 +157,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Chudi Mbanefo</h2>
 					<p>Hometown: Northridge, CA<br>Voice Part: Baritone<br>Class of 2020 - Major: Chemical Engineering<br>Assistant Minister of Pitch<br></p> <!-- Invisible Spacer -->
-					<p>NEWEST OLD GUY</p>
+					<p>Despite countless surgeries, treatments, and second opinions, Chudi continues to suffer from Shoulder Hyperactivity Incapacitative Tremors. He can normally keep his S.H.I.T. together during most of rehearsal, but the moment he gains any power the motor regions of his brain go total seizure mode. Luckily, this debilitating condition is remedied by playing any sort of party music, the sound of which invigorates Chudi's tender bod to commence rhythmic gyration. This can be off-putting to most potential mates, but The Pikers will do anything to keep Chudi healthy and his condition stable. When Chudi is not plotting the untimely demise of whoever holds the position of Music Director, he can be found doing it for state.</p>
 				</div>
 			</div>
 
@@ -229,7 +169,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Paul Krucylak</h2>
 					<p>Hometown: St. Louis, MO<br>Voice Part: Baritone<br>Class of 2020 - Major: Biomedical Engineering<br></p> <!-- Invisible Spacer -->
-					<p>NEW GUY</p>
+					<p>NEWEST OLD GUY</p>
 				</div>
 			</div>
 
@@ -241,7 +181,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Nathan Marak</h2>
 					<p>Hometown: Shreveport, LA<br>Voice Part: Tenor<br>Class of 2020 - Major: Political Science<br></p> <!-- Invisible Spacer -->
-					<p>NEW GUY</p>
+					<p>NEWEST OLD GUY</p>
 				</div>
 			</div>
 
@@ -253,7 +193,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Max Klapow</h2>
 					<p>Hometown: Birmingham, AL<br>Voice Part: Tenor 2<br>Class of 2021 - Majors: PNP and Political Science<br></p> <!-- Invisible Spacer -->
-					<p>NEW GUY</p>
+					<p>NEWEST OLD GUY</p>
 				</div>
 			</div>
 
@@ -265,7 +205,7 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Zach Eisner</h2>
 					<p>Hometown: Los Angeles, CA<br>Voice Part: Tenor<br>Class of 2021 - Major: Biomedical Engineering<br></p> <!-- Invisible Spacer -->
-					<p>NEW GUY</p>
+					<p>NEWEST OLD GUY</p>
 				</div>
 			</div>
 
@@ -277,7 +217,31 @@ Pikers New Website src copyright John Hamilton 2018
 				<div class="col-md-9">
 					<h2>Seth Ledford</h2>
 					<p>Hometown: Pomona, NY<br>Voice Part: Baritone<br>Class of 2021 - Major: Electrical Engineering<br></p> <!-- Invisible Spacer -->
-					<p>NEW GUY</p>
+					<p>NEWEST OLD GUY</p>
+				</div>
+			</div>
+			
+			<p></p> <!-- Invisible Spacer -->
+			<div class="row">
+				<div class="col-md-3">
+					<img class="img-responsive img-thumbnail img-fill" src="images/faces/smith.jpg" alt="Oliver Smith">
+				</div>
+				<div class="col-md-9">
+					<h2>Oliver Smith</h2>
+					<p>Hometown: Westport, CT<br>Voice Part: Baritone<br>Class of 2021 - Major: International Area Studies<br></p> <!-- Invisible Spacer -->
+					<p>NEWEST OLD GUY</p>
+				</div>
+			</div>
+			
+			<p></p> <!-- Invisible Spacer -->
+			<div class="row">
+				<div class="col-md-3">
+					<img class="img-responsive img-thumbnail img-fill" src="images/faces/holmes.jpg" alt="Davis Holmes">
+				</div>
+				<div class="col-md-9">
+					<h2>Davis Holmes</h2>
+					<p>Hometown: Baltimore, MD<br>Voice Part: Baritone<br>Class of 2021 - Major: Undecided<br></p> <!-- Invisible Spacer -->
+					<p>NEWEST OLD GUY</p>
 				</div>
 			</div>
 
