--- a/pikerswebsite/landing.html
+++ b/pikerswebsite/landing.html
@@ -13,7 +13,7 @@ Pikers New Website src copyright John Hamilton 2018
 	<meta name="author" content="">
 	<!-- <link rel="icon" href="../../favicon.ico"> -->
 
-	<title>Washington University Pikers</title>
+	<title>The Washington University Pikers</title>
 
 	<!-- Bootstrap core CSS -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
